--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,13 @@
-<h1>Hi, Korn</h1>
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+    <title>OpenAuth2</title>
+  </head>
+  <body>
+    <p>Index Route</p>
+    <div>
+      <a href="/log_in">Log in with The ZUCK</a>
+    </div>
+  </body>
+</html>
